SVN_SILENT made messages (.desktop file)
svn path=/branches/KDE/3.5/kdeaccessibility/kmouth/; revision=603992

--- a/books/de.desktop
+++ b/books/de.desktop
@@ -25,6 +25,7 @@ Name[hu]=Német
 Name[is]=Þýska
 Name[it]=Tedesco
 Name[ja]=ドイツ語
+Name[km]= អាឡឺម៉ង់
 Name[lt]=Vokiečių
 Name[mk]=Германски
 Name[ms]=Jerman
