--- a/books/en.desktop
+++ b/books/en.desktop
@@ -26,6 +26,7 @@ Name[hu]=Angol
 Name[is]=Enska
 Name[it]=Inglese
 Name[ja]=英語
+Name[km]= អង់គ្លេស​
 Name[lt]=Anglų
 Name[mk]=Англиски
 Name[ms]=Inggeris
