--- a/books/nl.desktop
+++ b/books/nl.desktop
@@ -22,6 +22,7 @@ Name[hu]=Holland
 Name[is]=Hollenska
 Name[it]=Olandese
 Name[ja]=オランダ語
+Name[km]= ហុលឡង់​
 Name[lt]=Olandų
 Name[mk]=Холандски
 Name[ms]=Belanda
