--- a/books/sv.desktop
+++ b/books/sv.desktop
@@ -26,6 +26,7 @@ Name[hu]=Svéd
 Name[is]=Sænska
 Name[it]=Svedese
 Name[ja]=スウェーデン語
+Name[km]= ស៊ុយអែត
 Name[lt]=Švedų
 Name[mk]=Шведски
 Name[ms]=Sweden
