--- a/kmouth.desktop
+++ b/kmouth.desktop
@@ -14,6 +14,7 @@ Name[cy]=KCeg
 Name[eo]=KBuŝo
 Name[hi]=के-माउथ
 Name[is]=KMunnur
+Name[km]= KMouth
 Name[pa]=ਕੇ-ਮੂੰਹ
 Name[ro]=Vorbitor
 Name[sv]=Kmouth
@@ -46,6 +47,7 @@ GenericName[hu]=Beszédszintetizátor
 GenericName[is]=Viðmót á talgerfilinn
 GenericName[it]=Interfaccia grafica per il sintetizzatore vocale
 GenericName[ja]=スピーチシンセサイザフロントエンド
+GenericName[km]= ការនិយាយ​ឈរមុខ Synthesizer 
 GenericName[lt]=Kalbos sintezatoriaus naudotojo sąsaja
 GenericName[mk]=Преден крај на синтисајзерот за говор
 GenericName[ms]=Antaramuka Pensintesis Pertuturan
