SVN_SILENT made messages (.desktop file)
svn path=/branches/KDE/3.5/kdeaccessibility/kmouth/; revision=615344

--- a/kmouth.desktop
+++ b/kmouth.desktop
@@ -41,7 +41,7 @@ GenericName[fa]=پایانۀ ترکیب‌دهندۀ گفتار
 GenericName[fi]=Puhesyntetisaattorin käyttöliittymä
 GenericName[fr]=Interface graphique de synthèse vocale
 GenericName[ga]=Clár tosaigh an sintéiseoir cainte
-GenericName[gl]=Interface de usuario para sintetizador de voz
+GenericName[gl]=Interface para o Sintetizador de Voz
 GenericName[hi]=स्पीच सिंथेसाइज़र फ्रन्टएण्ड
 GenericName[hu]=Beszédszintetizátor
 GenericName[is]=Viðmót á talgerfilinn
