--- a/books/de.desktop
+++ b/books/de.desktop
@@ -25,7 +25,7 @@ Name[hu]=Német
 Name[is]=Þýska
 Name[it]=Tedesco
 Name[ja]=ドイツ語
-Name[km]= អាឡឺម៉ង់
+Name[km]= អាល្លឺម៉ង់
 Name[lt]=Vokiečių
 Name[mk]=Германски
 Name[ms]=Jerman
