--- a/kmouth.desktop
+++ b/kmouth.desktop
@@ -47,7 +47,7 @@ GenericName[hu]=Beszédszintetizátor
 GenericName[is]=Viðmót á talgerfilinn
 GenericName[it]=Interfaccia grafica per il sintetizzatore vocale
 GenericName[ja]=スピーチシンセサイザフロントエンド
-GenericName[km]= ការនិយាយ​ឈរមុខ Synthesizer 
+GenericName[km]= ផ្នែក​ខាង​មុខ​កម្មវិធី​សង្គ្រោះ​ការ​និយាយ
 GenericName[lt]=Kalbos sintezatoriaus naudotojo sąsaja
 GenericName[mk]=Преден крај на синтисајзерот за говор
 GenericName[ms]=Antaramuka Pensintesis Pertuturan
