SVN_SILENT made messages (.desktop file)
svn path=/branches/KDE/3.5/kdeaccessibility/kmouth/; revision=634045

--- a/books/de.desktop
+++ b/books/de.desktop
@@ -32,6 +32,7 @@ Name[ms]=Jerman
 Name[mt]=Ġermaniż
 Name[nb]=Tysk
 Name[nds]=Hoochdüütsch
+Name[ne]=जर्मनी
 Name[nl]=Duits
 Name[nn]=Tysk
 Name[pa]=ਜਰਮਨ
