--- a/books/en.desktop
+++ b/books/en.desktop
@@ -33,6 +33,7 @@ Name[ms]=Inggeris
 Name[mt]=Ingliż
 Name[nb]=Engelsk
 Name[nds]=Engelsch
+Name[ne]=अंग्रेजी
 Name[nl]=Engels
 Name[nn]=Engelsk
 Name[pa]=ਅੰਗਰੇਜ਼ੀ
