--- a/books/nl.desktop
+++ b/books/nl.desktop
@@ -28,6 +28,7 @@ Name[mk]=Холандски
 Name[ms]=Belanda
 Name[nb]=Nederlandsk
 Name[nds]=Nedderlannsch
+Name[ne]=डच
 Name[nl]=Nederlands
 Name[pa]=ਡੱਚ
 Name[pl]=Holenderska
