--- a/books/sv.desktop
+++ b/books/sv.desktop
@@ -33,6 +33,7 @@ Name[ms]=Sweden
 Name[mt]=Svediż
 Name[nb]=Svensk
 Name[nds]=Sweedsch
+Name[ne]=स्वीडिस
 Name[nl]=Zweeds
 Name[nn]=Svensk
 Name[pa]=ਸਵੀਡਨੀ
