--- a/kmouth.desktop
+++ b/kmouth.desktop
@@ -15,6 +15,7 @@ Name[eo]=KBuŝo
 Name[hi]=के-माउथ
 Name[is]=KMunnur
 Name[km]= KMouth
+Name[ne]=केडीई माउथ
 Name[pa]=ਕੇ-ਮੂੰਹ
 Name[ro]=Vorbitor
 Name[sv]=Kmouth
@@ -54,6 +55,7 @@ GenericName[ms]=Antaramuka Pensintesis Pertuturan
 GenericName[mt]=Programm Għall-Ħolqien ta' Diskors Artifiċjali
 GenericName[nb]=Brukerflate for talesystem
 GenericName[nds]=Böversiet för de Blicksnuut
+GenericName[ne]=संवाद सिन्थेसाइजर फ्रन्टइन्ड
 GenericName[nl]=Spraaksynthesizer
 GenericName[nn]=Grensesnitt for talesyntese
 GenericName[pa]=ਬੋਲੀ ਸੰਸਲੇਸ਼ਣ ਮੁੱਖ
