SVN_SILENT made messages (.desktop file)
svn path=/trunk/KDE/kdeaccessibility/kmouth/; revision=640001

--- a/books/de.desktop
+++ b/books/de.desktop
@@ -1,5 +1,50 @@
 [Desktop Entry]
 Name=German
+Name[ar]=ألمانية
+Name[br]=Alamaneg
+Name[ca]=Alemany
+Name[cs]=Německy
+Name[cy]=Almaeneg
+Name[da]=Tysk
+Name[de]=Deutsch
 Name[el]=Γερμανικά
+Name[eo]=Germana
+Name[es]=Alemán
+Name[et]=Saksa
+Name[eu]=Alemaniera
+Name[fa]=آلمانی
+Name[fi]=Saksalainen
 Name[fr]=Allemand
+Name[ga]=Gearmáinis
+Name[gl]=Alemán
+Name[he]=גרמנית
+Name[hu]=Német
+Name[is]=Þýska
+Name[it]=Tedesco
+Name[ja]=ドイツ語
+Name[km]= អាល្លឺម៉ង់
+Name[lt]=Vokiečių
+Name[mk]=Германски
+Name[ms]=Jerman
+Name[nb]=Tysk
+Name[nds]=Hoochdüütsch
+Name[ne]=जर्मनी
+Name[nl]=Duits
+Name[nn]=Tysk
+Name[pa]=ਜਰਮਨ
+Name[pl]=Niemiecka
+Name[pt]=Alemão
+Name[pt_BR]=Alemão
+Name[ro]=Germană
+Name[ru]=Немецкий
+Name[sl]=nemško
+Name[sr]=Немачки
+Name[sr@Latn]=Nemački
+Name[sv]=Tyska
+Name[ta]=ஜெர்மன்
+Name[tg]=Немисӣ
+Name[tr]=Almanca
+Name[uk]=Німецька
+Name[uz]=Олмонча
 Name[x-test]=xxGermanxx
+Name[zh_TW]=德語
