--- a/books/en.desktop
+++ b/books/en.desktop
@@ -1,6 +1,51 @@
 # KDE Config File
 [Desktop Entry]
 Name=English
+Name[ar]=إنجليزية
+Name[br]=Saozneg
+Name[ca]=Anglès
+Name[cs]=Anglicky
+Name[cy]=Saesneg
+Name[da]=Engelsk
+Name[de]=Englisch
 Name[el]=Αγγλικά
+Name[eo]=Angla
+Name[es]=Inglés
+Name[et]=Inglise
+Name[eu]=Ingelesa
+Name[fa]=انگلیسی
+Name[fi]=Englantilainen
 Name[fr]=Anglais
+Name[ga]=Béarla
+Name[gl]=Inglés
+Name[he]=אנגלית
+Name[hu]=Angol
+Name[is]=Enska
+Name[it]=Inglese
+Name[ja]=英語
+Name[km]= អង់គ្លេស​
+Name[lt]=Anglų
+Name[mk]=Англиски
+Name[ms]=Inggeris
+Name[nb]=Engelsk
+Name[nds]=Engelsch
+Name[ne]=अंग्रेजी
+Name[nl]=Engels
+Name[nn]=Engelsk
+Name[pa]=ਅੰਗਰੇਜ਼ੀ
+Name[pl]=Angielska
+Name[pt]=Inglês
+Name[pt_BR]=Inglês
+Name[ro]=Engleză
+Name[ru]=Английский
+Name[sl]=angleško
+Name[sr]=Енглески
+Name[sr@Latn]=Engleski
+Name[sv]=Engelska
+Name[ta]=ஆங்கிலம்
+Name[tg]=Англисӣ
+Name[tr]=İngilizce
+Name[uk]=Англійська
+Name[uz]=Инглизча
 Name[x-test]=xxEnglishxx
+Name[zh_TW]=英語
