--- a/books/nl.desktop
+++ b/books/nl.desktop
@@ -1,5 +1,44 @@
 # KDE Config File
 [Desktop Entry]
 Name=Dutch
+Name[br]=Nederlandeg
+Name[ca]=Holandès
+Name[cs]=Holandsky
+Name[cy]=Iseldireg
+Name[da]=Hollandsk
+Name[de]=Niederländisch
+Name[es]=Danés
+Name[et]=Hollandi
+Name[eu]=Nederlandera
+Name[fa]=هلندی
+Name[fi]=Tanskalainen
 Name[fr]=Hollandais
+Name[ga]=Ollainnis
+Name[gl]=Holandés
+Name[he]=דנית
+Name[hu]=Holland
+Name[is]=Hollenska
+Name[it]=Olandese
+Name[ja]=オランダ語
+Name[km]= ហុល្លង់​
+Name[lt]=Olandų
+Name[mk]=Холандски
+Name[ms]=Belanda
+Name[nb]=Nederlandsk
+Name[nds]=Nedderlannsch
+Name[ne]=डच
+Name[nl]=Nederlands
+Name[pa]=ਡੱਚ
+Name[pl]=Holenderska
+Name[pt]=Holandês
+Name[pt_BR]=Holandês
+Name[ru]=Голландский
+Name[sl]=Nizozemsko
+Name[sr]=Холандски
+Name[sr@Latn]=Holandski
+Name[sv]=Holländska
+Name[tg]=Немисӣ
+Name[tr]=Flemenkçe
+Name[uk]=Голландська
 Name[x-test]=xxDutchxx
+Name[zh_TW]=荷蘭語
