--- a/kmouth.desktop
+++ b/kmouth.desktop
@@ -8,9 +8,62 @@ DocPath=kmouth/index.html
 Comment=
 Terminal=false
 Name=KMouth
+Name[ar]=برنامج KMouth
+Name[cy]=KCeg
+Name[eo]=KBuŝo
+Name[is]=KMunnur
+Name[km]= KMouth
+Name[ne]=केडीई माउथ
+Name[pa]=ਕੇ-ਮੂੰਹ
+Name[ro]=Vorbitor
+Name[sv]=Kmouth
+Name[ta]=K வாய்
+Name[tg]=KДаҳон
 Name[x-test]=xxKMouthxx
 GenericName=Speech Synthesizer Frontend
+GenericName[ar]=واجهة النَظام الصَوتي
+GenericName[ca]=Interfície per al sintetitzador de veu
+GenericName[cs]=Rozhraní hlasového syntetizátoru
+GenericName[cy]=Blaen-wyneb Syntheseisydd Lleferydd
+GenericName[da]=Forende til tale-synthesizer
+GenericName[de]=Oberfläche für Sprachsynthesizer
 GenericName[el]=Συνθέτης ομιλίας
+GenericName[en_GB]=Speech Synthesiser Frontend
+GenericName[eo]=Fasado Por Parolsintezilo
+GenericName[es]=Interfaz de usuario para síntesis de voz
+GenericName[et]=Kõnesüntesaator
+GenericName[eu]=Hizkera-sintetizadorearen interfazea
+GenericName[fa]=پایانۀ ترکیب‌دهندۀ گفتار
+GenericName[fi]=Puhesyntetisaattorin käyttöliittymä
 GenericName[fr]=Interface graphique de synthèse vocale
+GenericName[ga]=Clár tosaigh an sintéiseoir cainte
+GenericName[gl]=Interface para o Sintetizador de Voz
+GenericName[hu]=Beszédszintetizátor
+GenericName[is]=Viðmót á talgerfilinn
+GenericName[it]=Interfaccia grafica per il sintetizzatore vocale
+GenericName[ja]=スピーチシンセサイザフロントエンド
+GenericName[km]= ផ្នែក​ខាង​មុខ​កម្មវិធី​សង្គ្រោះ​ការ​និយាយ
+GenericName[lt]=Kalbos sintezatoriaus naudotojo sąsaja
+GenericName[mk]=Преден крај на синтисајзерот за говор
+GenericName[ms]=Antaramuka Pensintesis Pertuturan
+GenericName[nb]=Brukerflate for talesystem
+GenericName[nds]=Böversiet för de Blicksnuut
+GenericName[ne]=संवाद सिन्थेसाइजर फ्रन्टइन्ड
+GenericName[nl]=Spraaksynthesizer
+GenericName[nn]=Grensesnitt for talesyntese
+GenericName[pa]=ਬੋਲੀ ਸੰਸਲੇਸ਼ਣ ਮੁੱਖ
+GenericName[pl]=Program obsługujący syntezator mowy
+GenericName[pt]=Sintetizador de Fala
+GenericName[pt_BR]=Interface do Sintetizador de Fala
+GenericName[ro]=Interfaţă pentru sinteză vocală
+GenericName[ru]=Интерфейс к синтезаторам речи
+GenericName[sl]=Vmesnik za sintezo govora
+GenericName[sr]=Интерфејс за синтетизатор говора
+GenericName[sr@Latn]=Interfejs za sintetizator govora
+GenericName[sv]=Gränssnitt för talsyntes
+GenericName[tg]=Сухани Синтезатори Пешбуда
+GenericName[tr]=Konuşma Sentezleyici Arayüzü
+GenericName[uk]=Графічний інтерфейс синтезатора мовлення
 GenericName[x-test]=xxSpeech Synthesizer Frontendxx
+GenericName[zh_TW]=語音合成器前端
 Categories=Qt;KDE;Utility;Accessibility;
