--- a/books/sv.desktop
+++ b/books/sv.desktop
@@ -1,6 +1,51 @@
 # KDE Config File
 [Desktop Entry]
 Name=Swedish
+Name[ar]=سويدية
+Name[br]=Svedeg
+Name[ca]=Suec
+Name[cs]=Švédsky
+Name[cy]=Swedeg
+Name[da]=Svensk
+Name[de]=Schwedisch
 Name[el]=Σουηδικά
+Name[eo]=Sveda
+Name[es]=Sueco
+Name[et]=Rootsi
+Name[eu]=Suediera
+Name[fa]=سوئدی
+Name[fi]=Ruotsalainen
 Name[fr]=Suédois
+Name[ga]=Sualainnis
+Name[gl]=Sueco
+Name[he]=שוודית
+Name[hu]=Svéd
+Name[is]=Sænska
+Name[it]=Svedese
+Name[ja]=スウェーデン語
+Name[km]= ស៊ុយអែដ
+Name[lt]=Švedų
+Name[mk]=Шведски
+Name[ms]=Sweden
+Name[nb]=Svensk
+Name[nds]=Sweedsch
+Name[ne]=स्वीडिस
+Name[nl]=Zweeds
+Name[nn]=Svensk
+Name[pa]=ਸਵੀਡਨੀ
+Name[pl]=Szwedzka
+Name[pt]=Sueco
+Name[pt_BR]=Suíço
+Name[ro]=Suedeză
+Name[ru]=Шведский
+Name[sl]=švedsko
+Name[sr]=Шведски
+Name[sr@Latn]=Švedski
+Name[sv]=Svenska
+Name[ta]=ஸ்வீடிஷ்
+Name[tg]=Шведӣ
+Name[tr]=İsveççe
+Name[uk]=Шведська
+Name[uz]=Шведча
 Name[x-test]=xxSwedishxx
+Name[zh_TW]=瑞典語
