add klanguagebutton locally, as it is now removed from libkdeui
svn path=/trunk/KDE/kdeaccessibility/kmouth/; revision=652034

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -14,6 +14,7 @@ set(libwordcompletion_SRCS
 	${CMAKE_SOURCE_DIR}/kmouth/wordcompletion/wordcompletion.cpp 
 	${CMAKE_SOURCE_DIR}/kmouth/wordcompletion/wordcompletionwidget.cpp 
 	${CMAKE_SOURCE_DIR}/kmouth/wordcompletion/dictionarycreationwizard.cpp 
+	${CMAKE_SOURCE_DIR}/kmouth/wordcompletion/klanguagebutton.cpp
 	${CMAKE_SOURCE_DIR}/kmouth/wordcompletion/klanguagebuttonhelper.cpp
 	)
         
