SVN_SILENT made messages (.desktop file)
svn path=/branches/KDE/3.5/kdeaccessibility/kmouth/; revision=665465

--- a/kmouth.desktop
+++ b/kmouth.desktop
@@ -21,6 +21,7 @@ Name[ro]=Vorbitor
 Name[sv]=Kmouth
 Name[ta]=K வாய்
 Name[tg]=KДаҳон
+Name[tr]=Kmouth
 Name[vi]=Mồm K
 Name[zh_CN]=K 语音精灵
 GenericName=Speech Synthesizer Frontend
