SVN_SILENT made messages (.desktop file)
svn path=/trunk/KDE/kdeaccessibility/kmouth/; revision=669358

--- a/books/de.desktop
+++ b/books/de.desktop
@@ -40,7 +40,7 @@ Name[ro]=Germană
 Name[ru]=Немецкий
 Name[sl]=nemško
 Name[sr]=Немачки
-Name[sr@Latn]=Nemački
+Name[sr@latin]=Nemački
 Name[sv]=Tyska
 Name[ta]=ஜெர்மன்
 Name[tg]=Немисӣ
