--- a/books/en.desktop
+++ b/books/en.desktop
@@ -41,7 +41,7 @@ Name[ro]=Engleză
 Name[ru]=Английский
 Name[sl]=angleško
 Name[sr]=Енглески
-Name[sr@Latn]=Engleski
+Name[sr@latin]=Engleski
 Name[sv]=Engelska
 Name[ta]=ஆங்கிலம்
 Name[tg]=Англисӣ
