--- a/books/sv.desktop
+++ b/books/sv.desktop
@@ -36,12 +36,12 @@ Name[nn]=Svensk
 Name[pa]=ਸਵੀਡਨੀ
 Name[pl]=Szwedzka
 Name[pt]=Sueco
-Name[pt_BR]=Suíço
+Name[pt_BR]=Sueco
 Name[ro]=Suedeză
 Name[ru]=Шведский
 Name[sl]=švedsko
 Name[sr]=Шведски
-Name[sr@Latn]=Švedski
+Name[sr@latin]=Švedski
 Name[sv]=Svenska
 Name[ta]=ஸ்வீடிஷ்
 Name[tg]=Шведӣ
