--- a/kmouth.desktop
+++ b/kmouth.desktop
@@ -54,12 +54,12 @@ GenericName[nn]=Grensesnitt for talesyntese
 GenericName[pa]=ਬੋਲੀ ਸੰਸਲੇਸ਼ਣ ਫਰੰਟ-ਐਂਡ
 GenericName[pl]=Program obsługujący syntezator mowy
 GenericName[pt]=Sintetizador de Fala
-GenericName[pt_BR]=Interface do Sintetizador de Fala
+GenericName[pt_BR]=Sintetizador de Fala
 GenericName[ro]=Interfaţă pentru sinteză vocală
 GenericName[ru]=Интерфейс к синтезаторам речи
 GenericName[sl]=Vmesnik za sintezo govora
 GenericName[sr]=Интерфејс за синтетизатор говора
-GenericName[sr@Latn]=Interfejs za sintetizator govora
+GenericName[sr@latin]=Interfejs za sintetizator govora
 GenericName[sv]=Gränssnitt för talsyntes
 GenericName[tg]=Сухани Синтезатори Пешбуда
 GenericName[tr]=Konuşma Sentezleyici Arayüzü
