--- a/books/nl.desktop
+++ b/books/nl.desktop
@@ -36,7 +36,7 @@ Name[pt_BR]=Holandês
 Name[ru]=Голландский
 Name[sl]=Nizozemsko
 Name[sr]=Холандски
-Name[sr@Latn]=Holandski
+Name[sr@latin]=Holandski
 Name[sv]=Holländska
 Name[tg]=Немисӣ
 Name[tr]=Flemenkçe
