SVN_SILENT made messages (.desktop file)
svn path=/trunk/KDE/kdeaccessibility/kmouth/; revision=674501

--- a/books/de.desktop
+++ b/books/de.desktop
@@ -35,6 +35,7 @@ Name[nn]=Tysk
 Name[pa]=ਜਰਮਨ
 Name[pl]=Niemiecka
 Name[pt]=Alemão
+Name[pt_BR]=Alemão
 Name[ro]=Germană
 Name[ru]=Немецкий
 Name[sl]=nemško
