--- a/books/en.desktop
+++ b/books/en.desktop
@@ -36,6 +36,7 @@ Name[nn]=Engelsk
 Name[pa]=ਅੰਗਰੇਜ਼ੀ
 Name[pl]=Angielska
 Name[pt]=Inglês
+Name[pt_BR]=Inglês
 Name[ro]=Engleză
 Name[ru]=Английский
 Name[sl]=angleško
