--- a/books/sv.desktop
+++ b/books/sv.desktop
@@ -36,6 +36,7 @@ Name[nn]=Svensk
 Name[pa]=ਸਵੀਡਨੀ
 Name[pl]=Szwedzka
 Name[pt]=Sueco
+Name[pt_BR]=Sueco
 Name[ro]=Suedeză
 Name[ru]=Шведский
 Name[sl]=švedsko
