--- a/kmouth.desktop
+++ b/kmouth.desktop
@@ -54,6 +54,7 @@ GenericName[nn]=Grensesnitt for talesyntese
 GenericName[pa]=ਬੋਲੀ ਸੰਸਲੇਸ਼ਣ ਫਰੰਟ-ਐਂਡ
 GenericName[pl]=Program obsługujący syntezator mowy
 GenericName[pt]=Sintetizador de Fala
+GenericName[pt_BR]=Sintetizador de Fala
 GenericName[ro]=Interfaţă pentru sinteză vocală
 GenericName[ru]=Интерфейс к синтезаторам речи
 GenericName[sl]=Vmesnik za sintezo govora
