--- a/books/nl.desktop
+++ b/books/nl.desktop
@@ -32,6 +32,7 @@ Name[nl]=Nederlands
 Name[pa]=ਡੱਚ
 Name[pl]=Holenderska
 Name[pt]=Holandês
+Name[pt_BR]=Holandês
 Name[ru]=Голландский
 Name[sl]=Nizozemsko
 Name[sr]=Холандски
