--- a/books/de.desktop
+++ b/books/de.desktop
@@ -34,6 +34,8 @@ Name[nl]=Duits
 Name[nn]=Tysk
 Name[pa]=ਜਰਮਨ
 Name[pl]=Niemiecka
+Name[pt]=Alemão
+Name[pt_BR]=Alemão
 Name[ro]=Germană
 Name[ru]=Немецкий
 Name[sl]=nemško
