--- a/books/en.desktop
+++ b/books/en.desktop
@@ -35,6 +35,8 @@ Name[nl]=Engels
 Name[nn]=Engelsk
 Name[pa]=ਅੰਗਰੇਜ਼ੀ
 Name[pl]=Angielska
+Name[pt]=Inglês
+Name[pt_BR]=Inglês
 Name[ro]=Engleză
 Name[ru]=Английский
 Name[sl]=angleško
