--- a/books/sv.desktop
+++ b/books/sv.desktop
@@ -35,6 +35,8 @@ Name[nl]=Zweeds
 Name[nn]=Svensk
 Name[pa]=ਸਵੀਡਨੀ
 Name[pl]=Szwedzka
+Name[pt]=Sueco
+Name[pt_BR]=Sueco
 Name[ro]=Suedeză
 Name[ru]=Шведский
 Name[sl]=švedsko
