--- a/kmouth.desktop
+++ b/kmouth.desktop
@@ -51,6 +51,8 @@ GenericName[nl]=Spraaksynthesizer
 GenericName[nn]=Grensesnitt for talesyntese
 GenericName[pa]=ਬੋਲੀ ਸੰਸਲੇਸ਼ਣ ਫਰੰਟ-ਐਂਡ
 GenericName[pl]=Program obsługujący syntezator mowy
+GenericName[pt]=Interface do Sintetizador de Fala
+GenericName[pt_BR]=Interface do Sintetizador de Fala
 GenericName[ro]=Interfaţă pentru sinteză vocală
 GenericName[ru]=Интерфейс к синтезаторам речи
 GenericName[sl]=Vmesnik za sintezo govora
