--- a/kmouth.desktop
+++ b/kmouth.desktop
@@ -34,7 +34,7 @@ GenericName[eu]=Hizkera-sintetizadorearen interfazea
 GenericName[fa]=پایانۀ ترکیب‌دهندۀ گفتار
 GenericName[fi]=Puhesyntetisaattorin käyttöliittymä
 GenericName[fr]=Interface graphique de synthèse vocale
-GenericName[ga]=Clár tosaigh an sintéiseoir cainte
+GenericName[ga]=Comhéadan Sintéiseora Cainte
 GenericName[gl]=Interface para o Sintetizador de Voz
 GenericName[hu]=Beszédszintetizátor
 GenericName[is]=Viðmót á talgerfilinn
