change XDG_APPS_DIR -> XDG_APPS_INSTALL_DIR, XDG_DIRECTORY_DIR->XDG_DIRECTORY_INSTALL_DIR, DBUS_INTERFACES_DIR->DBUS_INTERFACES_INSTALL_ DIR, DBUS_SERVICES_DIR->DBUS_SERVICES_INSTALL_DIR to have same naming convention as discussed with Alex.
svn path=/trunk/KDE/kdeaccessibility/kmouth/; revision=691214

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -45,7 +45,7 @@ set(kmouth_SRCS ${libwordcompletion_SRCS} ${libphrasebook_SRCS}
    kmouth.cpp 
    main.cpp )
 
-set(kspeech_xml  ${DBUS_INTERFACES_DIR}/org.kde.KSpeech.xml)
+set(kspeech_xml  ${DBUS_INTERFACES_INSTALL_DIR}/org.kde.KSpeech.xml)
 qt4_add_dbus_interface(kmouth_SRCS ${kspeech_xml} kspeech_interface)
 
 kde4_add_ui_files(kmouth_SRCS preferencesui.ui texttospeechconfigurationui.ui )
@@ -59,7 +59,7 @@ install(TARGETS kmouth  DESTINATION ${BIN_INSTALL_DIR} )
 
 ########### install files ###############
 
-install( FILES kmouth.desktop  DESTINATION  ${XDG_APPS_DIR} )
+install( FILES kmouth.desktop  DESTINATION  ${XDG_APPS_INSTALL_DIR} )
 install( FILES kmouthrc  DESTINATION  ${CONFIG_INSTALL_DIR} )
 install( FILES kmouthui.rc  DESTINATION  ${DATA_INSTALL_DIR}/kmouth )
 
