--- a/kmouth.desktop
+++ b/kmouth.desktop
@@ -20,6 +20,7 @@ Name[ta]=K வாய்
 Name[tg]=KДаҳон
 Name[x-test]=xxKMouthxx
 GenericName=Speech Synthesizer Frontend
+GenericName[bg]=Синтезатор на глас
 GenericName[ca]=Interfície per al sintetitzador de veu
 GenericName[cs]=Rozhraní hlasového syntetizátoru
 GenericName[cy]=Blaen-wyneb Syntheseisydd Lleferydd
