SVN_SILENT made messages (.desktop file)
svn path=/trunk/KDE/kdeaccessibility/kmouth/; revision=699161

--- a/kmouth.desktop
+++ b/kmouth.desktop
@@ -8,6 +8,7 @@ DocPath=kmouth/index.html
 Comment=
 Terminal=false
 Name=KMouth
+Name[ar]=فم كي
 Name[cy]=KCeg
 Name[eo]=KBuŝo
 Name[is]=KMunnur
@@ -20,6 +21,7 @@ Name[ta]=K வாய்
 Name[tg]=KДаҳон
 Name[x-test]=xxKMouthxx
 GenericName=Speech Synthesizer Frontend
+GenericName[ar]=واجهة تحليل النطق
 GenericName[bg]=Синтезатор на глас
 GenericName[ca]=Interfície per al sintetitzador de veu
 GenericName[cs]=Rozhraní hlasového syntetizátoru
