SVN_SILENT made messages (.desktop file)
svn path=/trunk/KDE/kdeaccessibility/kmouth/; revision=701748

--- a/books/nl.desktop
+++ b/books/nl.desktop
@@ -44,5 +44,6 @@ Name[sv]=Holländska
 Name[tg]=Немисӣ
 Name[tr]=Flemenkçe
 Name[uk]=Голландська
+Name[vi]=Hà Lan
 Name[x-test]=xxDutchxx
 Name[zh_TW]=荷蘭語
