--- a/books/sv.desktop
+++ b/books/sv.desktop
@@ -50,5 +50,6 @@ Name[tg]=Шведӣ
 Name[tr]=İsveççe
 Name[uk]=Шведська
 Name[uz]=Шведча
+Name[vi]=Thuỵ Điển
 Name[x-test]=xxSwedishxx
 Name[zh_TW]=瑞典語
