--- a/books/en.desktop
+++ b/books/en.desktop
@@ -50,5 +50,6 @@ Name[tg]=Англисӣ
 Name[tr]=İngilizce
 Name[uk]=Англійська
 Name[uz]=Инглизча
+Name[vi]=Anh
 Name[x-test]=xxEnglishxx
 Name[zh_TW]=英語
