--- a/kmouth.desktop
+++ b/kmouth.desktop
@@ -19,6 +19,7 @@ Name[ro]=Vorbitor
 Name[sv]=Kmouth
 Name[ta]=K வாய்
 Name[tg]=KДаҳон
+Name[vi]=Mồm K
 Name[x-test]=xxKMouthxx
 GenericName=Speech Synthesizer Frontend
 GenericName[ar]=واجهة تحليل النطق
@@ -65,6 +66,7 @@ GenericName[sv]=Gränssnitt för talsyntes
 GenericName[tg]=Сухани Синтезатори Пешбуда
 GenericName[tr]=Konuşma Sentezleyici Arayüzü
 GenericName[uk]=Графічний інтерфейс синтезатора мовлення
+GenericName[vi]=Giao diện Tổng hợp Giọng nói
 GenericName[x-test]=xxSpeech Synthesizer Frontendxx
 GenericName[zh_TW]=語音合成器前端
 Categories=Qt;KDE;Utility;Accessibility;
