SVN_SILENT made messages (.desktop file)
svn path=/trunk/KDE/kdeaccessibility/kmouth/; revision=702213

--- a/books/sv.desktop
+++ b/books/sv.desktop
@@ -32,7 +32,7 @@ Name[mk]=Шведски
 Name[ms]=Sweden
 Name[nb]=Svensk
 Name[nds]=Sweedsch
-Name[ne]=स्वीडिस
+Name[ne]=स्वीडिश
 Name[nl]=Zweeds
 Name[nn]=Svensk
 Name[pa]=ਸਵੀਡਨੀ
