DocPath -> X-DocPath for .desktop of type Application
svn path=/trunk/KDE/kdeaccessibility/kmouth/; revision=709124

--- a/kmouth.desktop
+++ b/kmouth.desktop
@@ -4,7 +4,7 @@ Encoding=UTF-8
 Type=Application
 Exec=kmouth -caption "%c" %i
 Icon=kmouth
-DocPath=kmouth/index.html
+X-DocPath=kmouth/index.html
 Comment=
 Terminal=false
 Name=KMouth
