SVN_SILENT made messages (.desktop file)
svn path=/trunk/KDE/kdeaccessibility/kmouth/; revision=715046

--- a/kmouth.desktop
+++ b/kmouth.desktop
@@ -21,6 +21,7 @@ Name[ta]=K வாய்
 Name[tg]=KДаҳон
 Name[vi]=Mồm K
 Name[x-test]=xxKMouthxx
+Name[zh_CN]=K 语音精灵
 GenericName=Speech Synthesizer Frontend
 GenericName[ar]=واجهة تحليل النطق
 GenericName[bg]=Синтезатор на глас
@@ -68,5 +69,6 @@ GenericName[tr]=Konuşma Sentezleyici Arayüzü
 GenericName[uk]=Графічний інтерфейс синтезатора мовлення
 GenericName[vi]=Giao diện Tổng hợp Giọng nói
 GenericName[x-test]=xxSpeech Synthesizer Frontendxx
+GenericName[zh_CN]=语音合成器前端
 GenericName[zh_TW]=語音合成器前端
 Categories=Qt;KDE;Utility;Accessibility;
