SVN_SILENT made messages (.desktop file)
svn path=/trunk/KDE/kdeaccessibility/kmouth/; revision=717669

--- a/kmouth.desktop
+++ b/kmouth.desktop
@@ -40,7 +40,7 @@ GenericName[fa]=پایانۀ ترکیب‌دهندۀ گفتار
 GenericName[fi]=Puhesyntetisaattorin käyttöliittymä
 GenericName[fr]=Interface graphique de synthèse vocale
 GenericName[ga]=Comhéadan Sintéiseora Cainte
-GenericName[gl]=Interface para o Sintetizador de Voz
+GenericName[gl]=Interface para o sintetizador de voz
 GenericName[hu]=Beszédszintetizátor
 GenericName[is]=Viðmót á talgerfilinn
 GenericName[it]=Interfaccia grafica per il sintetizzatore vocale
