SVN_SILENT made messages (.desktop file)
svn path=/trunk/KDE/kdeaccessibility/kmouth/; revision=728759

--- a/books/de.desktop
+++ b/books/de.desktop
@@ -34,6 +34,7 @@ Name[nds]=Hoochdüütsch
 Name[ne]=जर्मनी
 Name[nl]=Duits
 Name[nn]=Tysk
+Name[oc]=Aleman
 Name[pa]=ਜਰਮਨ
 Name[pl]=Niemiecka
 Name[pt]=Alemão
