--- a/books/en.desktop
+++ b/books/en.desktop
@@ -35,6 +35,7 @@ Name[nds]=Engelsch
 Name[ne]=अंग्रेजी
 Name[nl]=Engels
 Name[nn]=Engelsk
+Name[oc]=Anglés
 Name[pa]=ਅੰਗਰੇਜ਼ੀ
 Name[pl]=Angielska
 Name[pt]=Inglês
