--- a/books/nl.desktop
+++ b/books/nl.desktop
@@ -32,6 +32,7 @@ Name[nb]=Nederlandsk
 Name[nds]=Nedderlannsch
 Name[ne]=डच
 Name[nl]=Nederlands
+Name[oc]=Olandés
 Name[pa]=ਡੱਚ
 Name[pl]=Holenderska
 Name[pt]=Holandês
