--- a/books/sv.desktop
+++ b/books/sv.desktop
@@ -35,6 +35,7 @@ Name[nds]=Sweedsch
 Name[ne]=स्वीडिश
 Name[nl]=Zweeds
 Name[nn]=Svensk
+Name[oc]=Suedés
 Name[pa]=ਸਵੀਡਨੀ
 Name[pl]=Szwedzka
 Name[pt]=Sueco
