SVN_SILENT made messages (.desktop file)
svn path=/trunk/KDE/kdeaccessibility/kmouth/; revision=750416

--- a/books/sv.desktop
+++ b/books/sv.desktop
@@ -21,11 +21,13 @@ Name[fr]=Suédois
 Name[ga]=Sualainnis
 Name[gl]=Sueco
 Name[he]=שוודית
+Name[hi]=स्वीडिश
 Name[hu]=Svéd
 Name[is]=Sænska
 Name[it]=Svedese
 Name[ja]=スウェーデン語
 Name[km]=ស៊ុយអែដ
+Name[ku]=Swêdî
 Name[lt]=Švedų
 Name[mk]=Шведски
 Name[ms]=Sweden
@@ -41,6 +43,7 @@ Name[pt]=Sueco
 Name[pt_BR]=Sueco
 Name[ro]=Suedeză
 Name[ru]=Шведский
+Name[sk]=Švédsky
 Name[sl]=švedsko
 Name[sr]=Шведски
 Name[sr@latin]=Švedski
