--- a/kmouth.desktop
+++ b/kmouth.desktop
@@ -10,6 +10,7 @@ Name=KMouth
 Name[ar]=فم كي
 Name[cy]=KCeg
 Name[eo]=KBuŝo
+Name[hi]=के-माउथ
 Name[is]=KMunnur
 Name[km]= KMouth
 Name[ne]=केडीई माउथ
@@ -40,6 +41,7 @@ GenericName[fi]=Puhesyntetisaattorin käyttöliittymä
 GenericName[fr]=Interface graphique de synthèse vocale
 GenericName[ga]=Comhéadan Sintéiseora Cainte
 GenericName[gl]=Interface para o sintetizador de voz
+GenericName[hi]=स्पीच सिंथेसाइज़र फ्रण्टएंड
 GenericName[hu]=Beszédszintetizátor
 GenericName[is]=Viðmót á talgerfilinn
 GenericName[it]=Interfaccia grafica per il sintetizzatore vocale
@@ -59,6 +61,7 @@ GenericName[pt]=Interface do Sintetizador de Fala
 GenericName[pt_BR]=Interface do Sintetizador de Fala
 GenericName[ro]=Interfaţă pentru sinteză vocală
 GenericName[ru]=Интерфейс к синтезаторам речи
+GenericName[sk]=Rozhranie pre syntezátor reči
 GenericName[sl]=Vmesnik za sintezo govora
 GenericName[sr]=Интерфејс за синтетизатор говора
 GenericName[sr@latin]=Interfejs za sintetizator govora
