--- a/books/de.desktop
+++ b/books/de.desktop
@@ -20,11 +20,13 @@ Name[fr]=Allemand
 Name[ga]=Gearmáinis
 Name[gl]=Alemán
 Name[he]=גרמנית
+Name[hi]=जर्मन
 Name[hu]=Német
 Name[is]=Þýska
 Name[it]=Tedesco
 Name[ja]=ドイツ語
 Name[km]=អាល្លឺម៉ង់
+Name[ku]=Almanî
 Name[lt]=Vokiečių
 Name[mk]=Германски
 Name[ms]=Jerman
@@ -40,6 +42,7 @@ Name[pt]=Alemão
 Name[pt_BR]=Alemão
 Name[ro]=Germană
 Name[ru]=Немецкий
+Name[sk]=Nemecky
 Name[sl]=nemško
 Name[sr]=Немачки
 Name[sr@latin]=Nemački
