--- a/books/en.desktop
+++ b/books/en.desktop
@@ -21,11 +21,13 @@ Name[fr]=Anglais
 Name[ga]=Béarla
 Name[gl]=Inglés
 Name[he]=אנגלית
+Name[hi]=अंग्रेज़ी
 Name[hu]=Angol
 Name[is]=Enska
 Name[it]=Inglese
 Name[ja]=英語
 Name[km]=អង់គ្លេស​
+Name[ku]=Îngilîzî
 Name[lt]=Anglų
 Name[mk]=Англиски
 Name[ms]=Inggeris
@@ -41,6 +43,7 @@ Name[pt]=Inglês
 Name[pt_BR]=Inglês
 Name[ro]=Engleză
 Name[ru]=Английский
+Name[sk]=Anglicky
 Name[sl]=angleško
 Name[sr]=Енглески
 Name[sr@latin]=Engleski
