--- a/books/nl.desktop
+++ b/books/nl.desktop
@@ -19,6 +19,7 @@ Name[fr]=Hollandais
 Name[ga]=Ollainnis
 Name[gl]=Holandés
 Name[he]=דנית
+Name[hi]=डच
 Name[hu]=Holland
 Name[is]=Hollenska
 Name[it]=Olandese
@@ -37,6 +38,7 @@ Name[pl]=Holenderska
 Name[pt]=Holandês
 Name[pt_BR]=Holandês
 Name[ru]=Голландский
+Name[sk]=Holandsky
 Name[sl]=Nizozemsko
 Name[sr]=Холандски
 Name[sr@latin]=Holandski
