SVN_SILENT made messages (.desktop file)
svn path=/trunk/KDE/kdeaccessibility/kmouth/; revision=751150

--- a/books/de.desktop
+++ b/books/de.desktop
@@ -28,6 +28,7 @@ Name[ja]=ドイツ語
 Name[km]=អាល្លឺម៉ង់
 Name[ku]=Almanî
 Name[lt]=Vokiečių
+Name[lv]=Vācu
 Name[mk]=Германски
 Name[ms]=Jerman
 Name[nb]=Tysk
