--- a/books/en.desktop
+++ b/books/en.desktop
@@ -29,6 +29,7 @@ Name[ja]=英語
 Name[km]=អង់គ្លេស​
 Name[ku]=Îngilîzî
 Name[lt]=Anglų
+Name[lv]=Angļu
 Name[mk]=Англиски
 Name[ms]=Inggeris
 Name[nb]=Engelsk
