--- a/books/nl.desktop
+++ b/books/nl.desktop
@@ -26,6 +26,7 @@ Name[it]=Olandese
 Name[ja]=オランダ語
 Name[km]=ហុល្លង់​
 Name[lt]=Olandų
+Name[lv]=Holandiešu
 Name[mk]=Холандски
 Name[ms]=Belanda
 Name[nb]=Nederlandsk
