--- a/books/sv.desktop
+++ b/books/sv.desktop
@@ -29,6 +29,7 @@ Name[ja]=スウェーデン語
 Name[km]=ស៊ុយអែដ
 Name[ku]=Swêdî
 Name[lt]=Švedų
+Name[lv]=Zviedru
 Name[mk]=Шведски
 Name[ms]=Sweden
 Name[nb]=Svensk
