--- a/kmouth.desktop
+++ b/kmouth.desktop
@@ -48,6 +48,7 @@ GenericName[it]=Interfaccia grafica per il sintetizzatore vocale
 GenericName[ja]=スピーチシンセサイザフロントエンド
 GenericName[km]= ផ្នែក​ខាង​មុខ​កម្មវិធី​សង្គ្រោះ​ការ​និយាយ
 GenericName[lt]=Kalbos sintezatoriaus naudotojo sąsaja
+GenericName[lv]=Skaņas sintizatora priekšpuse
 GenericName[mk]=Преден крај на синтисајзерот за говор
 GenericName[ms]=Antaramuka Pensintesis Pertuturan
 GenericName[nb]=Brukerflate for talesystem
