SVN_SILENT made messages (.desktop file)
svn path=/trunk/KDE/kdeaccessibility/kmouth/; revision=761818

--- a/books/de.desktop
+++ b/books/de.desktop
@@ -53,7 +53,7 @@ Name[tg]=Немисӣ
 Name[tr]=Almanca
 Name[uk]=Німецька
 Name[uz]=Олмонча
-Name[vi]=Đức
+Name[vi]=Tiếng Đức
 Name[x-test]=xxGermanxx
 Name[zh_CN]=德语
 Name[zh_TW]=德語
