--- a/books/en.desktop
+++ b/books/en.desktop
@@ -54,7 +54,7 @@ Name[tg]=Англисӣ
 Name[tr]=İngilizce
 Name[uk]=Англійська
 Name[uz]=Инглизча
-Name[vi]=Anh
+Name[vi]=Tiếng Anh
 Name[x-test]=xxEnglishxx
 Name[zh_CN]=英语
 Name[zh_TW]=英語
