--- a/books/sv.desktop
+++ b/books/sv.desktop
@@ -54,7 +54,7 @@ Name[tg]=Шведӣ
 Name[tr]=İsveççe
 Name[uk]=Шведська
 Name[uz]=Шведча
-Name[vi]=Thuỵ Điển
+Name[vi]=Tiếng Thuỵ Điển
 Name[x-test]=xxSwedishxx
 Name[zh_CN]=瑞典语
 Name[zh_TW]=瑞典語
