--- a/books/nl.desktop
+++ b/books/nl.desktop
@@ -47,7 +47,7 @@ Name[sv]=Holländska
 Name[tg]=Немисӣ
 Name[tr]=Flemenkçe
 Name[uk]=Голландська
-Name[vi]=Hà Lan
+Name[vi]=Tiếng Hà Lan
 Name[x-test]=xxDutchxx
 Name[zh_CN]=荷兰语
 Name[zh_TW]=荷蘭語
