move QT3_SUPPORT defines to folders where they are still required and enable deprecated warnings
svn path=/trunk/KDE/kdeaccessibility/kmouth/; revision=762298

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,6 @@
 project(kmouth)
 
-add_definitions (-DQT3_SUPPORT)
+add_definitions (-DQT3_SUPPORT -DQT3_SUPPORT_WARNINGS)
 set(libphrasebook_SRCS 
 	./phrasebook/phrasetree.cpp
 	./phrasebook/phrasebookparser.cpp
