SVN_SILENT made messages (.desktop file)
svn path=/trunk/KDE/kdeaccessibility/kmouth/; revision=764662

--- a/books/en.desktop
+++ b/books/en.desktop
@@ -31,6 +31,7 @@ Name[ku]=Îngilîzî
 Name[lt]=Anglų
 Name[lv]=Angļu
 Name[mk]=Англиски
+Name[ms]=Inggeris
 Name[nb]=Engelsk
 Name[nds]=Engelsch
 Name[ne]=अंग्रेजी
@@ -51,6 +52,7 @@ Name[sv]=Engelska
 Name[ta]=ஆங்கிலம்
 Name[tg]=Англисӣ
 Name[tr]=İngilizce
+Name[uk]=Inggeris
 Name[uz]=Инглизча
 Name[vi]=Tiếng Anh
 Name[x-test]=xxEnglishxx
