--- a/books/nl.desktop
+++ b/books/nl.desktop
@@ -28,6 +28,7 @@ Name[km]=ហុល្លង់​
 Name[lt]=Olandų
 Name[lv]=Holandiešu
 Name[mk]=Холандски
+Name[ms]=Belanda
 Name[nb]=Nederlandsk
 Name[nds]=Nedderlannsch
 Name[ne]=डच
@@ -45,6 +46,7 @@ Name[sr@latin]=Holandski
 Name[sv]=Holländska
 Name[tg]=Немисӣ
 Name[tr]=Flemenkçe
+Name[uk]=Belanda
 Name[vi]=Tiếng Hà Lan
 Name[x-test]=xxDutchxx
 Name[zh_CN]=荷兰语
