--- a/kmouth.desktop
+++ b/kmouth.desktop
@@ -50,6 +50,7 @@ GenericName[km]= ផ្នែក​ខាង​មុខ​កម្មវិធ
 GenericName[lt]=Kalbos sintezatoriaus naudotojo sąsaja
 GenericName[lv]=Skaņas sintizatora priekšpuse
 GenericName[mk]=Преден крај на синтисајзерот за говор
+GenericName[ms]=Antaramuka Pensintesis Pertuturan
 GenericName[nb]=Brukerflate for talesystem
 GenericName[nds]=Böversiet för de Blicksnuut
 GenericName[ne]=संवाद सिन्थेसाइजर फ्रन्टइन्ड
@@ -68,6 +69,7 @@ GenericName[sr@latin]=Interfejs za sintetizator govora
 GenericName[sv]=Gränssnitt för talsyntes
 GenericName[tg]=Сухани Синтезатори Пешбуда
 GenericName[tr]=Konuşma Sentezleyici Arayüzü
+GenericName[uk]=Antaramuka Pensintesis Pertuturan
 GenericName[vi]=Giao diện Tổng hợp Giọng nói
 GenericName[x-test]=xxSpeech Synthesizer Frontendxx
 GenericName[zh_CN]=语音合成器前端
