--- a/books/sv.desktop
+++ b/books/sv.desktop
@@ -31,6 +31,7 @@ Name[ku]=Swêdî
 Name[lt]=Švedų
 Name[lv]=Zviedru
 Name[mk]=Шведски
+Name[ms]=Sweden
 Name[nb]=Svensk
 Name[nds]=Sweedsch
 Name[ne]=स्वीडिश
@@ -51,6 +52,7 @@ Name[sv]=Svenska
 Name[ta]=ஸ்வீடிஷ்
 Name[tg]=Шведӣ
 Name[tr]=İsveççe
+Name[uk]=Sweden
 Name[uz]=Шведча
 Name[vi]=Tiếng Thuỵ Điển
 Name[x-test]=xxSwedishxx
