SVN_SILENT made messages (.desktop file)
svn path=/trunk/KDE/kdeaccessibility/kmouth/; revision=765177

--- a/books/de.desktop
+++ b/books/de.desktop
@@ -51,7 +51,7 @@ Name[sv]=Tyska
 Name[ta]=ஜெர்மன்
 Name[tg]=Немисӣ
 Name[tr]=Almanca
-Name[uk]=Jerman
+Name[uk]=Німецька
 Name[uz]=Олмонча
 Name[vi]=Tiếng Đức
 Name[x-test]=xxGermanxx
