--- a/books/en.desktop
+++ b/books/en.desktop
@@ -52,7 +52,7 @@ Name[sv]=Engelska
 Name[ta]=ஆங்கிலம்
 Name[tg]=Англисӣ
 Name[tr]=İngilizce
-Name[uk]=Inggeris
+Name[uk]=Англійська
 Name[uz]=Инглизча
 Name[vi]=Tiếng Anh
 Name[x-test]=xxEnglishxx
