--- a/books/nl.desktop
+++ b/books/nl.desktop
@@ -46,7 +46,7 @@ Name[sr@latin]=Holandski
 Name[sv]=Holländska
 Name[tg]=Немисӣ
 Name[tr]=Flemenkçe
-Name[uk]=Belanda
+Name[uk]=Голландська
 Name[vi]=Tiếng Hà Lan
 Name[x-test]=xxDutchxx
 Name[zh_CN]=荷兰语
