--- a/kmouth.desktop
+++ b/kmouth.desktop
@@ -69,7 +69,7 @@ GenericName[sr@latin]=Interfejs za sintetizator govora
 GenericName[sv]=Gränssnitt för talsyntes
 GenericName[tg]=Сухани Синтезатори Пешбуда
 GenericName[tr]=Konuşma Sentezleyici Arayüzü
-GenericName[uk]=Antaramuka Pensintesis Pertuturan
+GenericName[uk]=Графічний інтерфейс синтезатора мовлення
 GenericName[vi]=Giao diện Tổng hợp Giọng nói
 GenericName[x-test]=xxSpeech Synthesizer Frontendxx
 GenericName[zh_CN]=语音合成器前端
