--- a/books/sv.desktop
+++ b/books/sv.desktop
@@ -52,7 +52,7 @@ Name[sv]=Svenska
 Name[ta]=ஸ்வீடிஷ்
 Name[tg]=Шведӣ
 Name[tr]=İsveççe
-Name[uk]=Sweden
+Name[uk]=Шведська
 Name[uz]=Шведча
 Name[vi]=Tiếng Thuỵ Điển
 Name[x-test]=xxSwedishxx
