SVN_SILENT made messages (.desktop file)
svn path=/branches/KDE/4.0/kdeaccessibility/kmouth/; revision=779528

--- a/books/nl.desktop
+++ b/books/nl.desktop
@@ -33,6 +33,7 @@ Name[nb]=Nederlandsk
 Name[nds]=Nedderlannsch
 Name[ne]=डच
 Name[nl]=Nederlands
+Name[nn]=Nederlandsk
 Name[oc]=Olandés
 Name[pa]=ਡੱਚ
 Name[pl]=Holenderska
