SVN_SILENT made messages (.desktop file)
svn path=/trunk/KDE/kdeaccessibility/kmouth/; revision=808740

--- a/books/de.desktop
+++ b/books/de.desktop
@@ -52,7 +52,8 @@ Name[ta]=ஜெர்மன்
 Name[tg]=Немисӣ
 Name[tr]=Almanca
 Name[uk]=Німецька
-Name[uz]=Олмонча
+Name[uz]=Olmoncha
+Name[uz@cyrillic]=Олмонча
 Name[vi]=Tiếng Đức
 Name[x-test]=xxGermanxx
 Name[zh_CN]=德语
