--- a/books/en.desktop
+++ b/books/en.desktop
@@ -53,7 +53,8 @@ Name[ta]=ஆங்கிலம்
 Name[tg]=Англисӣ
 Name[tr]=İngilizce
 Name[uk]=Англійська
-Name[uz]=Инглизча
+Name[uz]=Inglizcha
+Name[uz@cyrillic]=Инглизча
 Name[vi]=Tiếng Anh
 Name[x-test]=xxEnglishxx
 Name[zh_CN]=英语
