--- a/books/sv.desktop
+++ b/books/sv.desktop
@@ -53,7 +53,8 @@ Name[ta]=ஸ்வீடிஷ்
 Name[tg]=Шведӣ
 Name[tr]=İsveççe
 Name[uk]=Шведська
-Name[uz]=Шведча
+Name[uz]=Shvedcha
+Name[uz@cyrillic]=Шведча
 Name[vi]=Tiếng Thuỵ Điển
 Name[x-test]=xxSwedishxx
 Name[zh_CN]=瑞典语
