SVN_SILENT made messages (.desktop file)
svn path=/branches/KDE/3.5/kdeaccessibility/kmouth/; revision=809005

--- a/books/de.desktop
+++ b/books/de.desktop
@@ -52,7 +52,7 @@ Name[tg]=Немисӣ
 Name[th]=เยอรมัน
 Name[tr]=Almanca
 Name[uk]=Німецька
-Name[uz]=Немисча
+Name[uz]=Nemischa
 Name[vi]=Đức
 Name[zh_CN]=德语
 Name[zh_TW]=德語
