--- a/books/sv.desktop
+++ b/books/sv.desktop
@@ -53,7 +53,7 @@ Name[tg]=Шведӣ
 Name[th]=สวีเดน
 Name[tr]=İsveççe
 Name[uk]=Шведська
-Name[uz]=Шведча
+Name[uz]=Shvedcha
 Name[vi]=Thuỵ Điển
 Name[zh_CN]=瑞典语
 Name[zh_TW]=瑞典語
