--- a/books/en.desktop
+++ b/books/en.desktop
@@ -53,7 +53,7 @@ Name[tg]=Англисӣ
 Name[th]=อังกฤษ
 Name[tr]=İngilizce
 Name[uk]=Англійська
-Name[uz]=Инглизча
+Name[uz]=Inglizcha
 Name[vi]=Anh
 Name[zh_CN]=英语
 Name[zh_TW]=英語
