SVN_SILENT made messages (.desktop file)
svn path=/branches/KDE/3.5/kdeaccessibility/kmouth/; revision=809531

--- a/books/de.desktop
+++ b/books/de.desktop
@@ -25,6 +25,7 @@ Name[hu]=Német
 Name[is]=Þýska
 Name[it]=Tedesco
 Name[ja]=ドイツ語
+Name[ka]=გერმანული
 Name[km]= អាល្លឺម៉ង់
 Name[lt]=Vokiečių
 Name[mk]=Германски
@@ -42,7 +43,7 @@ Name[pt_BR]=Alemão
 Name[ro]=Germană
 Name[ru]=Немецкий
 Name[rw]=Ikidage
-Name[sk]=Nemecky
+Name[sk]=nemčina
 Name[sl]=nemško
 Name[sr]=Немачки
 Name[sr@Latn]=Nemački
@@ -53,6 +54,7 @@ Name[th]=เยอรมัน
 Name[tr]=Almanca
 Name[uk]=Німецька
 Name[uz]=Nemischa
+Name[uz@cyrillic]=Немисча
 Name[vi]=Đức
 Name[zh_CN]=德语
 Name[zh_TW]=德語
