--- a/books/en.desktop
+++ b/books/en.desktop
@@ -26,6 +26,7 @@ Name[hu]=Angol
 Name[is]=Enska
 Name[it]=Inglese
 Name[ja]=英語
+Name[ka]=ინგლისური
 Name[km]= អង់គ្លេស​
 Name[lt]=Anglų
 Name[mk]=Англиски
@@ -43,7 +44,7 @@ Name[pt_BR]=Inglês
 Name[ro]=Engleză
 Name[ru]=Английский
 Name[rw]=Icyongereza
-Name[sk]=Anglicky
+Name[sk]=angličtina
 Name[sl]=angleško
 Name[sr]=Енглески
 Name[sr@Latn]=Engleski
@@ -54,6 +55,7 @@ Name[th]=อังกฤษ
 Name[tr]=İngilizce
 Name[uk]=Англійська
 Name[uz]=Inglizcha
+Name[uz@cyrillic]=Инглизча
 Name[vi]=Anh
 Name[zh_CN]=英语
 Name[zh_TW]=英語
