--- a/books/nl.desktop
+++ b/books/nl.desktop
@@ -22,6 +22,7 @@ Name[hu]=Holland
 Name[is]=Hollenska
 Name[it]=Olandese
 Name[ja]=オランダ語
+Name[ka]=ჰოლანდიური
 Name[km]= ហុល្លង់​
 Name[lt]=Olandų
 Name[mk]=Холандски
@@ -36,7 +37,7 @@ Name[pt]=Holandês
 Name[pt_BR]=Holandês
 Name[ru]=Голландский
 Name[rw]=Ikinyaholande
-Name[sk]=Holandsky
+Name[sk]=holandčina
 Name[sl]=Nizozemsko
 Name[sr]=Холандски
 Name[sr@Latn]=Holandski
