--- a/books/sv.desktop
+++ b/books/sv.desktop
@@ -26,6 +26,7 @@ Name[hu]=Svéd
 Name[is]=Sænska
 Name[it]=Svedese
 Name[ja]=スウェーデン語
+Name[ka]=შვედური
 Name[km]= ស៊ុយអែដ
 Name[lt]=Švedų
 Name[mk]=Шведски
@@ -43,7 +44,7 @@ Name[pt_BR]=Suíço
 Name[ro]=Suedeză
 Name[ru]=Шведский
 Name[rw]=Ikinyasuwede
-Name[sk]=Švédsky
+Name[sk]=švédčina
 Name[sl]=švedsko
 Name[sr]=Шведски
 Name[sr@Latn]=Švedski
@@ -54,6 +55,7 @@ Name[th]=สวีเดน
 Name[tr]=İsveççe
 Name[uk]=Шведська
 Name[uz]=Shvedcha
+Name[uz@cyrillic]=Шведча
 Name[vi]=Thuỵ Điển
 Name[zh_CN]=瑞典语
 Name[zh_TW]=瑞典語
