--- a/kmouth.desktop
+++ b/kmouth.desktop
@@ -49,6 +49,7 @@ GenericName[hu]=Beszédszintetizátor
 GenericName[is]=Viðmót á talgerfilinn
 GenericName[it]=Interfaccia grafica per il sintetizzatore vocale
 GenericName[ja]=スピーチシンセサイザフロントエンド
+GenericName[ka]=საუბრის სინქრონიზაციის ინტერფეისი
 GenericName[km]= ផ្នែក​ខាង​មុខ​កម្មវិធី​សង្គ្រោះ​ការ​និយាយ
 GenericName[lt]=Kalbos sintezatoriaus naudotojo sąsaja
 GenericName[mk]=Преден крај на синтисајзерот за говор
@@ -65,7 +66,7 @@ GenericName[pt]=Sintetizador de Fala
 GenericName[pt_BR]=Interface do Sintetizador de Fala
 GenericName[ro]=Interfaţă pentru sinteză vocală
 GenericName[ru]=Интерфейс к синтезаторам речи
-GenericName[sk]=Rozhranie pre syntezátor reči
+GenericName[sk]=Rozhranie pre syntetizátor reči
 GenericName[sl]=Vmesnik za sintezo govora
 GenericName[sr]=Интерфејс за синтетизатор говора
 GenericName[sr@Latn]=Interfejs za sintetizator govora
