SVN_SILENT made messages (.desktop file)
svn path=/trunk/KDE/kdeaccessibility/kmouth/; revision=824813

--- a/books/nl.desktop
+++ b/books/nl.desktop
@@ -10,7 +10,7 @@ Name[cs]=Holandsky
 Name[cy]=Iseldireg
 Name[da]=Hollandsk
 Name[de]=Niederländisch
-Name[es]=Danés
+Name[es]=Holandés
 Name[et]=Hollandi
 Name[eu]=Nederlandera
 Name[fa]=هلندی
