SVN_SILENT made messages (.desktop file)
svn path=/trunk/KDE/kdeaccessibility/kmouth/; revision=857411

--- a/books/nl.desktop
+++ b/books/nl.desktop
@@ -25,6 +25,7 @@ Name[is]=Hollenska
 Name[it]=Olandese
 Name[ja]=オランダ語
 Name[km]=ហុល្លង់​
+Name[ko]=네덜란드어
 Name[lt]=Olandų
 Name[lv]=Holandiešu
 Name[mk]=Холандски
