--- a/books/sv.desktop
+++ b/books/sv.desktop
@@ -27,6 +27,7 @@ Name[is]=Sænska
 Name[it]=Svedese
 Name[ja]=スウェーデン語
 Name[km]=ស៊ុយអែដ
+Name[ko]=스웨덴어
 Name[ku]=Swêdî
 Name[lt]=Švedų
 Name[lv]=Zviedru
