--- a/kmouth.desktop
+++ b/kmouth.desktop
@@ -48,6 +48,7 @@ GenericName[is]=Viðmót á talgerfilinn
 GenericName[it]=Interfaccia grafica per il sintetizzatore vocale
 GenericName[ja]=スピーチシンセサイザーのフロントエンド
 GenericName[km]= ផ្នែក​ខាង​មុខ​កម្មវិធី​សង្គ្រោះ​ការ​និយាយ
+GenericName[ko]=음성 합성기 프론트엔드
 GenericName[lt]=Kalbos sintezatoriaus naudotojo sąsaja
 GenericName[lv]=Skaņas sintizatora priekšpuse
 GenericName[mk]=Преден крај на синтисајзерот за говор
