--- a/books/de.desktop
+++ b/books/de.desktop
@@ -26,6 +26,7 @@ Name[is]=Þýska
 Name[it]=Tedesco
 Name[ja]=ドイツ語
 Name[km]=អាល្លឺម៉ង់
+Name[ko]=독일어
 Name[ku]=Almanî
 Name[lt]=Vokiečių
 Name[lv]=Vācu
