--- a/books/nl.desktop
+++ b/books/nl.desktop
@@ -40,6 +40,7 @@ Name[pa]=ਡੱਚ
 Name[pl]=Holenderska
 Name[pt]=Holandês
 Name[pt_BR]=Holandês
+Name[ro]=Olandeză
 Name[ru]=Голландский
 Name[sk]=Holandsky
 Name[sl]=Nizozemsko
