SVN_SILENT made messages (.desktop file)
svn path=/trunk/KDE/kdeaccessibility/kmouth/; revision=899714

--- a/books/sv.desktop
+++ b/books/sv.desktop
@@ -32,6 +32,7 @@ Name[ku]=Swêdî
 Name[lt]=Švedų
 Name[lv]=Zviedru
 Name[mk]=Шведски
+Name[ml]=സ്വീഡിഷ്
 Name[ms]=Sweden
 Name[nb]=Svensk
 Name[nds]=Sweedsch
