--- a/kmouth.desktop
+++ b/kmouth.desktop
@@ -14,6 +14,7 @@ Name[es]=KMouth
 Name[hi]=के-माउथ
 Name[is]=KMunnur
 Name[km]= KMouth
+Name[ml]=കെമൌത്ത്
 Name[ne]=केडीई माउथ
 Name[pa]=ਕੇ-ਮੂੰਹ
 Name[ro]=Vorbitor
@@ -52,6 +53,7 @@ GenericName[ko]=음성 합성기 프론트엔드
 GenericName[lt]=Kalbos sintezatoriaus naudotojo sąsaja
 GenericName[lv]=Skaņas sintizatora priekšpuse
 GenericName[mk]=Преден крај на синтисајзерот за говор
+GenericName[ml]=സംസാരസംയോജനത്തിനുള പ്രത്യ‌ക്ഷഉപാധി
 GenericName[ms]=Antaramuka Pensintesis Pertuturan
 GenericName[nb]=Brukerflate for talesystem
 GenericName[nds]=Böversiet för de Blicksnuut
