--- a/books/de.desktop
+++ b/books/de.desktop
@@ -31,6 +31,7 @@ Name[ku]=Almanî
 Name[lt]=Vokiečių
 Name[lv]=Vācu
 Name[mk]=Германски
+Name[ml]=ജര്‍മ്മന്‍
 Name[ms]=Jerman
 Name[nb]=Tysk
 Name[nds]=Hoochdüütsch
