--- a/books/en.desktop
+++ b/books/en.desktop
@@ -32,6 +32,7 @@ Name[ku]=Îngilîzî
 Name[lt]=Anglų
 Name[lv]=Angļu
 Name[mk]=Англиски
+Name[ml]=ഇംഗ്ലീഷ്
 Name[ms]=Inggeris
 Name[nb]=Engelsk
 Name[nds]=Engelsch
