--- a/books/nl.desktop
+++ b/books/nl.desktop
@@ -29,6 +29,7 @@ Name[ko]=네덜란드어
 Name[lt]=Olandų
 Name[lv]=Holandiešu
 Name[mk]=Холандски
+Name[ml]=ഡച്ച്
 Name[ms]=Belanda
 Name[nb]=Nederlandsk
 Name[nds]=Nedderlannsch
