SVN_SILENT made messages (.desktop file)
svn path=/branches/KDE/4.2/kdeaccessibility/kmouth/; revision=910007

--- a/books/nl.desktop
+++ b/books/nl.desktop
@@ -26,6 +26,7 @@ Name[it]=Olandese
 Name[ja]=オランダ語
 Name[km]=ហុល្លង់​
 Name[ko]=네덜란드어
+Name[ku]=Felemenkî
 Name[lt]=Olandų
 Name[lv]=Holandiešu
 Name[mk]=Холандски
