SVN_SILENT made messages (.desktop file)
svn path=/branches/KDE/4.2/kdeaccessibility/kmouth/; revision=919510

--- a/kmouth.desktop
+++ b/kmouth.desktop
@@ -64,7 +64,7 @@ GenericName[nn]=Grensesnitt for talesyntese
 GenericName[pa]=ਬੋਲੀ ਸੰਸਲੇਸ਼ਣ ਫਰੰਟ-ਐਂਡ
 GenericName[pl]=Program obsługujący syntezator mowy
 GenericName[pt]=Interface do Sintetizador de Fala
-GenericName[pt_BR]=Interface do Sintetizador de Fala
+GenericName[pt_BR]=Interface do sintetizador de voz
 GenericName[ro]=Interfaţă pentru sinteză vocală
 GenericName[ru]=Интерфейс к синтезаторам речи
 GenericName[sk]=Rozhranie pre syntezátor reči
